Paint background on savestate window

--- a/src/platform/qt/LoadSaveState.ui
+++ b/src/platform/qt/LoadSaveState.ui
@@ -94,7 +94,7 @@
       </sizepolicy>
      </property>
      <property name="styleSheet">
-      <string notr="true">font-size: 30pt; font-weight: bold;</string>
+      <string notr="true">font-size: 30pt; font-weight: bold; color: white;</string>
      </property>
      <property name="text">
       <string>%1 State</string>
