Hook up and finish up video recorder

--- a/src/platform/qt/VideoView.ui
+++ b/src/platform/qt/VideoView.ui
@@ -68,12 +68,7 @@
         </item>
         <item>
          <property name="text">
-          <string>Xvid</string>
-         </property>
-        </item>
-        <item>
-         <property name="text">
-          <string>Uncompressed</string>
+          <string>FFV1</string>
          </property>
         </item>
        </widget>
