Qt: Re-add Xvid and use YUV libx264 instead of RGB

--- a/src/platform/qt/VideoView.ui
+++ b/src/platform/qt/VideoView.ui
@@ -68,6 +68,11 @@
         </item>
         <item>
          <property name="text">
+          <string>Xvid</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
           <string>FFV1</string>
          </property>
         </item>
