--- a/src/platform/qt/resources.qrc
+++ b/src/platform/qt/resources.qrc
@@ -1,5 +1,6 @@
  <!DOCTYPE RCC><RCC version="1.0">
  <qresource>
      <file>../../../res/mgba-1024.png</file>
+     <file>../../../res/keymap.png</file>
  </qresource>
  </RCC>
