--- a/src/platform/qt/VideoView.ui
+++ b/src/platform/qt/VideoView.ui
@@ -431,11 +431,11 @@
          </item>
          <item row="1" column="3">
           <widget class="QSpinBox" name="hratio">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
            <property name="minimum">
             <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>9999</number>
            </property>
            <property name="value">
             <number>2</number>
@@ -444,11 +444,11 @@
          </item>
          <item row="1" column="1">
           <widget class="QSpinBox" name="wratio">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
            <property name="minimum">
             <number>1</number>
+           </property>
+           <property name="maximum">
+            <number>9999</number>
            </property>
            <property name="value">
             <number>3</number>
@@ -457,9 +457,6 @@
          </item>
          <item row="1" column="4">
           <widget class="QCheckBox" name="lockRatio">
-           <property name="enabled">
-            <bool>false</bool>
-           </property>
            <property name="text">
             <string>Lock aspect ratio</string>
            </property>
@@ -496,9 +493,25 @@
   <tabstop>start</tabstop>
   <tabstop>stop</tabstop>
   <tabstop>selectFile</tabstop>
+  <tabstop>presetHQ</tabstop>
+  <tabstop>presetYoutube</tabstop>
+  <tabstop>presetWebM</tabstop>
+  <tabstop>presetLossless</tabstop>
+  <tabstop>preset1080</tabstop>
+  <tabstop>preset720</tabstop>
+  <tabstop>preset480</tabstop>
+  <tabstop>preset160</tabstop>
   <tabstop>container</tabstop>
   <tabstop>video</tabstop>
   <tabstop>audio</tabstop>
+  <tabstop>vbr</tabstop>
+  <tabstop>abr</tabstop>
+  <tabstop>width</tabstop>
+  <tabstop>height</tabstop>
+  <tabstop>wratio</tabstop>
+  <tabstop>hratio</tabstop>
+  <tabstop>lockRatio</tabstop>
+  <tabstop>showAdvanced</tabstop>
  </tabstops>
  <resources/>
  <connections/>
