Qt: Add Opus to the audio codec mapping and list

--- a/src/platform/qt/VideoView.ui
+++ b/src/platform/qt/VideoView.ui
@@ -290,6 +290,11 @@
            </item>
            <item>
             <property name="text">
+             <string>Opus</string>
+            </property>
+           </item>
+           <item>
+            <property name="text">
              <string>Vorbis</string>
             </property>
            </item>
