--- a/src/platform/qt/GamePakView.ui
+++ b/src/platform/qt/GamePakView.ui
@@ -77,12 +77,12 @@
        </widget>
       </item>
       <item row="5" column="1">
-       <widget class="QCheckBox" name="sensorAccel">
+       <widget class="QCheckBox" name="sensorTilt">
         <property name="enabled">
          <bool>false</bool>
         </property>
         <property name="text">
-         <string>Accelerometer</string>
+         <string>Tilt</string>
         </property>
        </widget>
       </item>
